# S.O.K

./: .commitlintrc.json  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  conventional-commits.yml  release.yml
docs/: contributing.md  index.md
docs/api/: index.md
docs/api/apis/: base_api.md  books.md  games.md  index.md  music.md  video.md
docs/api/config/: api_registry.md  config_manager.md  index.md  session_manager.md
docs/api/core/: exceptions.md  index.md  interfaces.md  media_manager.md  utils.md
docs/api/file_operations/: base_operations.md  book_operations.md  game_operations.md  index.md  music_operations.md  video_operations.md
docs/api/media/: base_media.md  books.md  games.md  index.md  music.md  video.md
docs/architecture/: overview.md  structure.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
scripts/: README.md  build_docs.py  build_sok.py  build_ui.py  check.py  installation.iss  upload_release.py
src/sok/: __init__.py  __version__.py  main.py
src/sok/apis/: __init__.py  base_api.py
src/sok/config/: __init__.py  api_registry.py  config_manager.py  oauth_providers.py  session_manager.py
tests/acceptance/: test_music_book_organization.py  test_video_organization.py
tests/functional/: test_renaming_workflow.py
tests/integration/: test_file_ops.py  test_music_book_integration.py
tests/mock/: test_tmdb_mock.py
tests/performance/: test_file_ops_performance.py
tests/ui/: test_search_panel.py  test_search_widgets.py
tests/unit/: test_core_utils.py  test_media_adapters.py  test_media_manager_resilience.py
tools/: README.md  verify_i18n.py
(+130 files in other folders)
